@@ -1,3 +1,10 @@
+2008-03-18  Petr Ovtchenkov  <complement@users.sourceforge.net>
+
+	* stlport/stl/_string.c: derived from patch #1914475, wrong
+	replace for selfreferencing string; thanks Farid Zaripov;
+
+	* test/unit/string_test.cpp: test for problem above.
+	
 2008-01-29  Petr Ovtchenkov  <complement@users.sourceforge.net>
 
 	* build/Makefiles/gmake/gcc.mak, build/test/unit/gcc.mak:
